--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -7,17 +7,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primText">
+
         <Toolbar
             android:layout_width="match_parent"
             android:layout_height="95dp"
+            android:background="@color/secButton"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@color/secButton">
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
+            android:shadowRadius="30">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Groups"
+                android:textSize="43sp"
+                android:textStyle="bold"
+                android:textColor="@color/primText"/>
 
         </Toolbar>
-           
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
