--- a/app/src/main/res/layout/fragment_leader.xml
+++ b/app/src/main/res/layout/fragment_leader.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LeaderFragment"
-    android:id="@+id/leaderfrag">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.fragments.ProfileFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/primText">
 
-</FrameLayout>
+        <Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="95dp"
+            android:background="@color/secButton"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
+            android:shadowRadius="30">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LeaderBoard"
+                android:textSize="43sp"
+                android:textStyle="bold"
+                android:textColor="@color/primText"/>
+
+        </Toolbar>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
