--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
-    android:background="#576F72">
+    android:background="@color/primBg">
 
     <ImageView
         android:id="@+id/imageView"
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Poke'em"
         android:textSize="40dp"
+        android:textColor="@color/primText"
         app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
