--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="primText">#576F72</color>
     <color name="secText">#7D9D9C</color>
     <color name="secButton">#E4DCCF</color>
+    <color name="colorPrimary">#1E95FF</color>
+    <color name="colorPrimaryDark">#1E95FF</color>
+    <color name="colorAccent">#1E95FF</color>
+    <color name="gray">#EEEEEE</color>
+    <color name="gray_darken">#DDDDDD</color>
+    <color name="colorGray">#4A4A4A</color>
 </resources>
